--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
+body{
+    width: 100%;
+}
+
+main{
+    width: 100%;
+}
+
 header{
     height: 100px;
-    background-color: rebeccapurple;
+    background-color: #030A8C;
 }
 #icone-menu{
     float: left;
+    padding-left: 15px;
 }
 #imagem-menu{
     width: 100%;
@@ -20,30 +29,35 @@ header{
     font-size: 35px;
     padding-top: 2%;
     font-weight: bold;
+    color: white;
 }
 .section-format{
     display: flex;
     align-items: center;
-    padding: 5px;
-    width: 100%;
+    padding-left: 5px;
+    width: 99%;
 }
-#div-format{
+.div-format{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 }
-#div-format #titulo-format{
+.div-format .titulo-format{
     text-align: center;
     font-size: 50px;
     padding: 5px;
 }
 .paragrafos{
     font-size: 30px;
-    padding-left: 40px;
+    padding-left: 70px;
+    padding-right: 70px;
+    margin-top: 10px;
+    text-align: justify;
 }
 .imagem-format{
-    width: 50%;
+    margin: 5px;
+    width: 48%;
 }
 
 .botao-section{
@@ -66,9 +80,11 @@ header{
 
 #rodape{
     width: 100%;
-    height: 40px;
-    background-color: black;
-    color: red;
     text-align: center;
-    padding-top: 8px;
+    background-color: black;
+    color: white;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    font-style: italic;
+    background-color: black;
 }
